     - The Oracle `registry` variable is now always `DEFINE`d when Oracle
       scripts run.
     - Added the `upgrade` command, which upgrades the schema for the Sqitch
       registry for a target database.
     - Added the `script_hash` column to the `changes` registry table. This
       column contains a SHA-1 hash of the deploy script for the change at the
       time it was deployed.

0.997 2014-11-04T22:52:23Z
     [New Features]
     - Added support for new target properties. In addition to the existing
       `uri`, `client`, and `registry` properties, targets may also configure
       these properties via the new `--set` option to and `set-*` actions on
       the `target` command:
       * `top_dir`
       * `plan_file`
       * `extension`
       * `deploy_dir`
       * `revert_dir`
       * `verify_dir`
     - Added support for new engine configuration variables. In addition to
       the existing `target`, `client`, and `registry` variables, engine
       configuration may also include these variables:
       * `top_dir`
       * `plan_file`
       * `extension`
       * `deploy_dir`
       * `revert_dir`
       * `verify_dir`
     - Rationalized the hierarchical configuration of deployment targets. The
       properties of any given target will now be determined by examining
       values in the following order:
       * Command-line options
       * Target configuration
       * Engine configuration
       * Core configuration
       * Reasonable engine-specific defaults
     - Added the `engine` command to simplify engine configuration. This
       complements the newly-improved `target` command. Run `sqitch engine
       update-config` to update deprecated engine configurations and start
       using it.
     - Added the sqitch-configuration guide to provide an overview of core,
       engine, and target configuration. Includes some use-case examples and
       best suggested practices.
     [Improvements]