@@ -18,3 +18,6 @@ CREATE TABLE __myapp.users (
 -- Append line to reworked script so it gets a new SHA-1 hash
 -- Append line to reworked script so it gets a new SHA-1 hash
 -- Append line to reworked script so it gets a new SHA-1 hash
+-- Append line to reworked script so it gets a new SHA-1 hash
+-- Append line to reworked script so it gets a new SHA-1 hash
+-- Append line to reworked script so it gets a new SHA-1 hash
